<resources>
    <string name="app_name">MovieHub</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Pesquisar</string>
    <string name="title_profile">Perfil</string>
    <string name="now_playing">Em cartaz</string>
    <string name="up_coming">Em breve</string>
    <string name="slider_description">Filme destaque</string>
    <string name="popular">Populares</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="oldpassword">Senha Atual</string>
    <string name="newpassword">Senha Nova</string>
    <string name="enter">Entrar</string>
    <string name="salvar">Salvar</string>
    <string name="crie_um_perfil">Crie um perfil</string>
    <string name="novo_por_aqui">Novo por aqui?</string>
    <string name="sign">Registrar-se</string>
    <string name="edit">Editar Pefil</string>
    <string name="name">Nome</string>
    <string name="confirm_password">Confirme a senha</string>
    <string name="genre">Gênero</string>
    <string name="movie_image">Poster do filme</string>
    <string name="e_mail">e-mail</string>
    <string name="favorite_movies">Filmes Favoritados</string>

    <string-array name="genres">
        <item>28:Ação</item>
        <item>12:Aventura</item>
        <item>16:Animação</item>
        <item>35:Comédia</item>
        <item>80:Crime</item>
        <item>99:Documentário</item>
        <item>18:Drama</item>
        <item>10751:Família</item>
        <item>14:Fantasia</item>
        <item>36:História</item>
        <item>27:Terror</item>
        <item>10402:Música</item>
        <item>9648:Mistério</item>
        <item>10749:Romance</item>
        <item>878:Ficção Cientifica</item>
        <item>10770:Cinema TV</item>
        <item>53:Suspense</item>
        <item>10752:Guerra</item>
        <item>37:Faroeste</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>