<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.profile.ProfileEditFragment">

    <Button
        android:id="@+id/goback"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/goback_icon_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sign_title"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="100dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/edit"
        android:textAlignment="center"

        android:textSize="20sp"
        app:flow_horizontalAlign="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:flow_verticalAlign="center" />

    <EditText
        android:id="@+id/sign_name"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="10dp"
        android:autofillHints="name"
        android:ems="10"
        android:text="@+id/name_used"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_title" />

    <EditText
        android:id="@+id/sign_email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:autofillHints="emailAddress"
        android:text="@+id/email_used"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_name" />

    <EditText
        android:id="@+id/old_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:autofillHints="password"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_email" />

    <EditText
        android:id="@+id/new_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:autofillHints="password"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/old_password" />

    <TextView
        android:id="@+id/sign_label_confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="5dp"
        android:autofillHints="password"
        android:labelFor="@id/sign_confirm_password"
        android:text="@string/newpassword"
        app:layout_constraintBottom_toTopOf="@+id/new_password"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sign_label_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="5dp"
        android:labelFor="@id/sign_name"
        android:text="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/sign_name"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sign_label_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="5dp"
        android:labelFor="@id/sign_email"
        android:text="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/sign_email"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sign_label_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="5dp"
        android:autofillHints="password"
        android:labelFor="@id/sign_password"
        android:text="@string/oldpassword"
        app:layout_constraintBottom_toTopOf="@+id/old_password"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/sign_button_enter"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="105dp"
        android:text="@string/salvar"
        app:flow_verticalAlign="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_password" />

</androidx.constraintlayout.widget.ConstraintLayout>